sandbox/output
TicketDispenserTest.java:39: error: constructor TicketDispenser in class TicketDispenser cannot be applied to given types;
        TicketDispenser dispenser = new TicketDispenser(mockSequence);
                                    ^
  required: no arguments
  found: MockTurnNumberSequence
  reason: actual and formal argument lists differ in length
1 error
